[tool.poetry]
name = "repl_python3_reddit-bot-nts"
version = "0.1.0"
description = ""
authors = ["notthesmertist <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
